fix alignment issue

--- a/src/styles/pages/checkout.scss
+++ b/src/styles/pages/checkout.scss
@@ -89,6 +89,7 @@ $greyText: #788995;
 
                 .details {
                     color: #788995;
+                    width: 50%;
 
                     .price {
                         margin-top: 10px;
